Fix dialog and search input issues on Safari (maybe)

--- a/style.css
+++ b/style.css
@@ -355,9 +355,9 @@ input::placeholder {
 }
 
 input[type="search"] {
-    border-radius: 10px;
+    border-radius: 10px!important;
     -webkit-appearance: textfield;
-    -webkit-border-radius: 10px;
+    -webkit-border-radius: 10px!important;
 }
 
 input.big {
